# wren-altimeter

./: .gitmodules  README.md  altimeter.kicad_pcb  altimeter.kicad_prl  altimeter.kicad_pro  altimeter.kicad_sch  fp-lib-table
dashboard/: main.py  parser.py  test.py  wren_dashboard.py  wren_manager.py
firmware/: Cargo.toml  Embed.toml  build.rs  memory-nrf52833.x  memory.x  rust-toolchain.toml  rustfmt.toml
firmware/.cargo/: config.toml
firmware/bootloader/: Cargo.toml  memory.x
firmware/bootloader/.cargo/: config.toml
firmware/bootloader/src/: main.rs
firmware/src/: bluetooth.rs  flash_stuff.rs  flash_writer.rs  flight_sm.rs  flight_task.rs  kalman.rs  main.rs  nus.rs  usb_handler.rs
firmware/src/platform/: embedded.rs  mod.rs  native.rs
hardware/: .gitignore  altimeter.kicad_pcb  altimeter.kicad_prl  altimeter.kicad_pro  altimeter.kicad_sch  sym-lib-table
hardware/libs/BMP390L.pretty/: XDCR_BMP390L.kicad_mod
hardware/libs/custom.pretty/: square.kicad_mod
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/wren/: altimeter.kicad_pcb  altimeter.kicad_pro  altimeter.kicad_sch
hardware/wren/production/: bom.csv  netlist.ipc
hardware/wren_bt/: altimeter2.kicad_pcb  altimeter2.kicad_prl  altimeter2.kicad_pro  altimeter2.kicad_sch  fp-lib-table  sym-lib-table
hardware/wren_bt/libs/: BMP390L.kicad_sym
hardware/wren_bt/libs/custom.pretty/: SW_SPST_CK_KMS2xxGP.kicad_mod
hardware/wren_bt/libs/ebyte.pretty/: E104-BT5032A_BYT.kicad_mod
hardware/wren_bt/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
production/: positions.csv
