[package]
edition = "2021"
name = "Wren_bootloader"
version = "1.0.0"

[dependencies]
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }

embassy-nrf = { version = "0.3.1" , features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote", "nfc-pins-as-gpio", "time", "unstable-pac"] }
embassy-boot-nrf = { version = "0.4.0", features = ["defmt"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

embedded-storage = "0.3.1"
static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
cfg-if = "1.0.0"

[features]
default = ["defmt"]
defmt = [
    "embassy-nrf/defmt",
]
softdevice = [
    "embassy-boot-nrf/softdevice",
]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false


embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", rev = "8c5e34604c8b7c934259ba991433ae8e9f1ca61d" }
